Hero Section is Completed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -67,6 +63,23 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground flex flex-col justify-center min-h-screen m-0 mx-auto p-0 font-fontPrimary;
+  }
+}
+/* Custom Styles */
+@layer components {
+  .heading__title {
+    @apply px-3 py-1 text-xl  font-semibold text-card-foreground uppercase  sm:ml-0  rounded-tr-xl rounded-s-md ring-1 ring-ring border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground;
+  }
+
+  .nav__link {
+    @apply relative text-base text-white font-medium w-fit block after:block after:content-[''] after:absolute after:h-[3px] after:bg-indigo-600  after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:bottom-0 after:left-0 after:origin-right;
+  }
+
+  .text__bg {
+    background-image: linear-gradient(to right, #1d4ed8 0%, #fff 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
