--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,28 +58,96 @@
   }
 }
 
+/* Violet */
+/* @layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 224 71.4% 4.1%;
+    --card: 0 0% 100%;
+    --card-foreground: 224 71.4% 4.1%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 224 71.4% 4.1%;
+    --primary: 262.1 83.3% 57.8%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 220 14.3% 95.9%;
+    --secondary-foreground: 220.9 39.3% 11%;
+    --muted: 220 14.3% 95.9%;
+    --muted-foreground: 220 8.9% 46.1%;
+    --accent: 220 14.3% 95.9%;
+    --accent-foreground: 220.9 39.3% 11%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 220 13% 91%;
+    --input: 220 13% 91%;
+    --ring: 262.1 83.3% 57.8%;
+    --radius: 0.75rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --background: 224 71.4% 4.1%;
+    --foreground: 210 20% 98%;
+    --card: 224 71.4% 4.1%;
+    --card-foreground: 210 20% 98%;
+    --popover: 224 71.4% 4.1%;
+    --popover-foreground: 210 20% 98%;
+    --primary: 263.4 70% 50.4%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 215 27.9% 16.9%;
+    --secondary-foreground: 210 20% 98%;
+    --muted: 215 27.9% 16.9%;
+    --muted-foreground: 217.9 10.6% 64.9%;
+    --accent: 215 27.9% 16.9%;
+    --accent-foreground: 210 20% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 215 27.9% 16.9%;
+    --input: 215 27.9% 16.9%;
+    --ring: 263.4 70% 50.4%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+} */
+
 @layer base {
   * {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground flex flex-col justify-center min-h-screen m-0 mx-auto p-0 font-fontPrimary;
+    @apply bg-background text-foreground flex flex-col justify-center min-h-screen m-0 mx-auto p-0 font-fontPrimary select-none;
   }
 }
 /* Custom Styles */
 @layer components {
+  .main__container {
+    @apply container mx-auto px-8 my-4 md:my-12 pt-8 md:pt-12 space-y-6 md:space-y-8;
+  }
   .heading__title {
-    @apply px-3 py-1 text-xl  font-semibold text-card-foreground uppercase  sm:ml-0  rounded-tr-xl rounded-s-md ring-1 ring-ring border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground;
+    @apply px-3 py-1 text-xl font-semibold bg-popover text-popover-foreground uppercase  rounded-tr-xl rounded-s-md border border-border shadow-sm hover:bg-accent hover:text-accent-foreground transition-all duration-300 ease-in-out;
   }
 
   .nav__link {
-    @apply relative text-base text-white font-medium w-fit block after:block after:content-[''] after:absolute after:h-[3px] after:bg-indigo-600  after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:bottom-0 after:left-0 after:origin-right;
+    @apply relative text-base text-white font-medium w-fit block after:block after:content-[''] after:absolute after:h-[3px] after:bg-violet-600  after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:bottom-0 after:left-0 after:origin-right;
   }
 
   .text__bg {
-    background-image: linear-gradient(to right, #1d4ed8 0%, #fff 100%);
+    background-image: linear-gradient(to right, #06b6d4 0%, #3b82f6 30%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+  .bg__gradient {
+    background-image: linear-gradient(
+      110.87deg,
+      rgba(78, 92, 189, 0.2) 7.78%,
+      rgba(17, 18, 28, 0) 86.01%
+    );
   }
 }
